# hse-WideInt

./: .gitignore  CMakeLists.txt  README.md
cmake/: Core.cmake
include/: WideInt.h
modules/: WideInt.cppm  WideInt.h  WideInt.hpp
run/: pi.cpp
src/: DevCLI.cpp  WideInt.cpp  WideInt.cxx  base.cpp  bitutils.h  compare.cpp  divide.cpp  multiply.cpp  sum.cpp  utils.h
src/dev/: CLI.cpp
test/: Test.cpp  TestNeykandre.cpp
